Fixed small bug on Safari where it couldn't find font of Scroll down #30

--- a/src/style.css
+++ b/src/style.css
@@ -29,7 +29,6 @@ body {
 }
 
 .underline {
-  padding-bottom: 1rem;
   text-decoration: underline solid var(--colorBlack) 2px;
   text-underline-offset: 3px;
 }
@@ -70,7 +69,7 @@ p {
 }
 
 .title {
-  margin-top: -5rem;
+  margin-top: -3rem;
   font-size: 9rem;
 }
 
@@ -354,6 +353,8 @@ p {
   .header-background {
     transform: none;
     position: absolute;
+    width: 100%;
+    height: 100%;
     top: 0;
     left: 0;
     z-index: -1;
@@ -361,8 +362,8 @@ p {
 
   .scroll-down {
     width: 10rem;
-    right: 4.7rem;
-    bottom: 8.2rem;
+    right: 4.9rem;
+    bottom: 8.5rem;
   }
 
   /* Introduction */
